Add color themes.

--- a/demo.lpi
+++ b/demo.lpi
@@ -36,7 +36,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="10">
+    <Units Count="11">
       <Unit0>
         <Filename Value="demo.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -88,6 +88,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="OpenGLLightSources"/>
       </Unit9>
+      <Unit10>
+        <Filename Value="component\openglcolortheme.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="OpenGLColorTheme"/>
+      </Unit10>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
